<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_localization</name>
  <version>2.4.0</version>
  <description>Provides nonlinear state estimation through sensor fusion of an abritrary number of sensors.</description>

  <author email="ayrton04@gmail.com">Tom Moore</author> 
  <maintainer email="ayrton04@gmail.com">Tom Moore</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://ros.org/wiki/robot_localization</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>angles</depend>
  <depend>eigen</depend>
  <!--<depend>geographic_msgs</depend>-->
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>nav_msgs</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
